--- a/css/style.scss
+++ b/css/style.scss
@@ -108,4 +108,12 @@ header{
     justify-content: center;
     height: 110px;
   }
+
+  .containerIsoTipo {
+    height: 120px;
+  }
+  h2 {
+    color: #fff;
+    font-size: 44px;
+  }
 }
