--- a/css/style.scss
+++ b/css/style.scss
@@ -130,5 +130,15 @@ header{
       position: absolute;
     }
   }
+
+  .triangulosIzq {
+    position: relative;
+    img {
+      bottom: -81px;
+      left: -347px;
+      position: absolute;
+      width: 50px;
+    }
+  }
 }
 
