--- a/css/style.scss
+++ b/css/style.scss
@@ -157,4 +157,11 @@ main {
     letter-spacing: 0.3px;
     padding-bottom: 10px;
   }
+
+  hr {
+    border: 0;
+    border-top: 4px solid #009bdb;
+    padding-bottom: 12px;
+    width: 170px;
+  }
 }
