--- a/css/style.scss
+++ b/css/style.scss
@@ -165,3 +165,12 @@ main {
     width: 170px;
   }
 }
+
+footer {
+  align-self: flex-end;
+  color: #fff;
+
+  padding: 10px 15px !important;
+  text-align: center;
+  width: 100%;
+}
