--- a/css/style.scss
+++ b/css/style.scss
@@ -178,4 +178,10 @@ footer {
     text-transform: capitalize;
     text-align: left;
   }
+
+  .containerImg {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+  }
 }
