--- a/css/style.scss
+++ b/css/style.scss
@@ -184,4 +184,10 @@ footer {
     display: flex;
     justify-content: center;
   }
+  .imgMe {
+    border-radius: 50%;
+    filter: saturate(1.1);
+    width: 120px;
+    border: 2px solid #101010;
+  }
 }
