--- a/css/style.scss
+++ b/css/style.scss
@@ -213,4 +213,16 @@ footer {
     flex-basis: 2.333%;
     max-width: 2.333%;
   }
+
+  h3 {
+    padding-bottom: 5px;
+  }
+
+  .contacto ul li {
+    padding-bottom: 5px;
+  }
+
+  ul li {
+    list-style: none;
+  }
 }
