--- a/css/style.scss
+++ b/css/style.scss
@@ -225,4 +225,13 @@ footer {
   ul li {
     list-style: none;
   }
+
+  .redesSociales ul {
+    display: inline-flex;
+    width: 83%;
+  }
+
+  /* .redesSociales li > .ico {
+    padding-left: 20px;
+  } */
 }
