--- a/css/style.scss
+++ b/css/style.scss
@@ -234,4 +234,17 @@ footer {
   /* .redesSociales li > .ico {
     padding-left: 20px;
   } */
+
+  ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  h3 {
+    margin-left: 5px;
+  }
+
+  .col-xs-7.col-sm-4 > p {
+    margin-left: 7px;
+  }
 }
