--- a/css/style.scss
+++ b/css/style.scss
@@ -248,3 +248,16 @@ footer {
     margin-left: 7px;
   }
 }
+
+@media screen and (max-width: 768px) and (min-width: 550px) {
+    footer {
+      .col-xs-5.col-sm-3 {
+        -ms-flex-preferred-size: 32%;
+        flex-basis: 32%;
+        max-width: 32%;
+      }
+    
+  
+      
+    }
+  }
