--- a/css/style.scss
+++ b/css/style.scss
@@ -299,3 +299,14 @@ footer {
     }
   }
 }
+
+@media screen and (max-width: 550px) {
+    footer {
+      .contacto {
+        display: none;
+      }
+      .hidden {
+        display: block;
+      }
+    }
+  }
