--- a/css/style.scss
+++ b/css/style.scss
@@ -310,3 +310,18 @@ footer {
       }
     }
   }
+
+  @media screen and (max-width: 580px) {
+    header {
+      .containerNombre,
+      .containerIsoTipo {
+        height: initial;
+        padding-top: 12px;
+      }
+     
+     
+     
+    }
+  
+   
+  }
