--- a/css/style.scss
+++ b/css/style.scss
@@ -318,7 +318,13 @@ footer {
         height: initial;
         padding-top: 12px;
       }
-     
+      h2 {
+        font-size: 38px;
+      }
+      .containerIsoTipo {
+        height: initial;
+      }
+  
      
      
     }
