--- a/css/style.scss
+++ b/css/style.scss
@@ -325,7 +325,14 @@ footer {
         height: initial;
       }
   
-     
+      img {
+        width: 85px;
+      }
+      .cruses img {
+        bottom: -52px;
+        left: -80px;
+      }
+  
      
     }
   
