--- a/css/style.scss
+++ b/css/style.scss
@@ -333,7 +333,11 @@ footer {
         left: -80px;
       }
   
-     
+      .triangulosIzq img {
+        bottom: -71px;
+        left: -301px;
+        display: none;
+      }
     }
   
    
