--- a/css/style.scss
+++ b/css/style.scss
@@ -340,5 +340,8 @@ footer {
       }
     }
   
-   
+    main {
+      padding: 2% 6% !important;
+      padding-bottom: 10px !important;
+    }
   }
