@media screen and (max-width: 400px)

--- a/css/style.scss
+++ b/css/style.scss
@@ -362,3 +362,16 @@ footer {
       }
     }
   }
+
+  @media screen and (max-width: 400px) {
+    footer {
+      h3 {
+        margin-left: 1%;
+      }
+  
+      .col-xs-7.col-sm-4 > p {
+        margin-left: 2%;
+      }
+    }
+  }
+  
