--- a/css/style.scss
+++ b/css/style.scss
@@ -375,3 +375,24 @@ footer {
     }
   }
   
+  @media screen and (max-width: 360px) {
+    header {
+      h2 {
+        font-size: 29px !important;
+        padding-left: 10px;
+      }
+  
+      img {
+        width: 56px;
+      }
+  
+      .cruses img {
+        bottom: -41px;
+        width: 80px;
+        left: -75px;
+      }
+    }
+  
+  
+   
+  }
